# GameProject

./: CMakeLists.txt  README.md
includes/: application.h  resource.h
includes/components/: bullet.h  collision.h  component.h  health.h  movement.h  shooting.h
includes/components/abilities/: gravityshot.h
includes/components/enemies/: enemypatterns.h  espawnbehaviour.h
includes/math/: mat2x2.h  mat3x3.h  mat4x4.h  mathfunctions.h  quaternion.h  vector2.h  vector3.h  vector4.h
includes/physics/: collision.h  rigidbody.h
includes/rendering/: camera.h  geometry.h  renderer.h  shader.h  window.h
includes/scene/: gameobject.h  node.h  scene.h
includes/shader/: default.hlsl
includes/systems/: console.h  filesystem.h  inputhandler.h
includes/typedefs/: color.h  components.h  display.h  enemytypes.h  fileinterface.h  keys.h  time.h  transform.h  types.h  utils.h  winfile.h
res/: resource.rc
src/: application.cpp  bullet.cpp  camera.cpp  collision.cpp  component.cpp  console.cpp  espawnbehaviour.cpp  filesystem.cpp  gameobject.cpp  geometry.cpp  gravityshot.cpp  health.cpp  inputhandler.cpp  main.cpp  mat2x2.cpp  mat3x3.cpp  mat4x4.cpp  movement.cpp  node.cpp  quaternion.cpp  renderer.cpp  rigidbody.cpp  scene.cpp  shader.cpp  shooting.cpp  vector2.cpp  vector3.cpp  window.cpp  winfile.cpp
